# aemt

./: LICENSE  README.md  pyproject.toml
docs/: AEMT Read Me.docx
src/aemt/: __init__.py  atr.py  cartridge.py  cli.py  config.py  split.py  style.py
