[project]
name = "aemt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "idunmore", email = "62761638+idunmore@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "sty>=1.0.6",
]

[project.scripts]
aemt = "aemt:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
