[project]
name = "aemt"
version = "1.0.1"
description = "Atari Eight-bit Multi-Tool - Tools for Atari 8-bit computers, consoles and emulators"
readme = "README.md"
authors = [
    { name = "idunmore", email = "62761638+idunmore@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["atari", "the400", "atr", "8-bit", "cartridge", "disk image"]
classifiers = [    
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "sty>=1.0.6",
]

[project.scripts]
aemt = "aemt.cli:aemt"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://github.com/idunmore/aemt/docs"
Repository = "https://github.com/idunmore/aemt"
